--- a/readme
+++ b/readme
@@ -16,3 +16,8 @@ git push -u origin main
 
 …or import code from another repository
 You can initialize this repository with code from a Subversion, Mercurial, or TFS project.
+
+
+update repository from the remote:
+
+git pull
